--- a/CSS/sponsorus.css
+++ b/CSS/sponsorus.css
@@ -1,115 +1,48 @@
-body, html {
-	height: 100%;
-	width : 100%;
-	margin: 0;
-	font: 400 15px/1.8 "Lato", sans-serif;
-	color: #777;
-}
-
-.imgBlock {
-	position: relative;
-	/*opacity: 0.65;*/
-	background-attachment: fixed;
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-
-}
-
-.bigImg {
-	min-height: 100%;
-}
-
-.smallImg {
-	min-height: 400px;
-}
-
-.blackBox {
-	color: white;
-	background-color:black;
-	padding:50px 80px;
-	text-align: justify;
-}
 
 .bgimg-1 {
-	background-image: url("../PICS/photoShoot/teamPicvNew2.jpg");
+	background-image: url("../PICS/photos/photoShoot/teamPicvNew2.jpg");
 }
 
 .bgimg-2 {
-    background-image: url("../PICS/teamPicv2.jpg");
-	
+    background-image: url("../PICS/photos/oldPhotos/teamPicv2.jpg");	
 }
 
 .bgimg-3 {
-	background-image: url("../PICS/newBack.jpg");
+	background-image: url("../PICS/photos/misc/newBack.jpg");
 }
 
-.caption {
-	position: absolute;
-	left: 0;
-	top: 50%;
+
+/* 		
+	<div class = "sponsorContainer">
+		<a class="sponsorBox" href = "https://www.altium.com/">
+			<img class = "sponsorIMG" src="../PICS/Logo/Altium_logo.svg">
+		</a>
+	</div>
+*/
+
+.sponsorContainer {
+
 	width: 100%;
-	text-align: center;
-	color: #000;
-}
-
-.caption span.border {
-	background-color: #111;
-	color: #fff;
-	padding: 18px;
-	font-size: 25px;
-	letter-spacing: 10px;
-}
-
-h3 {
-	letter-spacing: 5px;
-	text-transform: uppercase;
-	font: 20px "Lato", sans-serif;
-	color: white;
-}
-
-#footerWrapper {
-	background-color: black;
-	/*opacity: .6;*/
-	color: white;
-	margin: 0;
-	border: 0;
-	padding: 25px 0px;
-	width: full;
-	/*position: absolute;*/
-	bottom: 0;
-}
-
-ul > li {
-	margin: 0;
-	border: 0;
-	padding: 15px 40px;
-	display: inline-block;
-}
-
-ul a {
-	margin: 0;
-	border: 0;
-	padding: 0;
-	color: white;
-}
-
-ul {
-	margin: 0;
-	border: 0;
-	padding: 0;
 	display: flex;
-	align-items: stretch; /* Default */
-	justify-content: space-between;
-	width: full;
+	flex-wrap: wrap;
 }
 
-/* Turn off parallax scrolling for tablets and phones */
-@media only screen and (max-device-width: 1024px) {
-	.imgBlock {
-		background-attachment: scroll;
-	}
-	ul {
-		display: block;
-	}
+.sponsorBox {
+	
+	border-radius: 20px;
+	background-color: white;
+
+	margin: 10px;
+	padding: 10px;
+
+	display: block;
+
+}
+
+.sponsorIMG {
+	width: 200px;
+
+	height: auto;
+
+	padding: 10px;
 }
